# wg-switch

./: Cargo.toml  LICENCE  README.md  build.sh  install.sh
src/: main.rs
src/modules/: checkers.rs  config.rs  handlers.rs  helpers.rs  interfaces.rs  mod.rs  services.rs
